修复微信打开报名指纹问题，修复其他已知问题

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/dog.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>通用年会抽奖系统</title>
+    <title>忒星科技通用年会抽奖系统</title>
 </head>
 
 <body>
